# PPGoose

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: 128x128.icns  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/compress/: avif.rs  gif.rs  jpeg.rs  mod.rs  png.rs  smart.rs  webp.rs
src/components/: DropZone.tsx  FileList.tsx  FileRow.tsx  Settings.tsx  StatsBar.tsx
src/lib/: tauri.ts
src/store/: useStore.ts
src/types/: index.ts
