[package]
name = "ppgoose"
version = "0.1.5"
description = "PPGoose — Smart Image Compressor"
authors = []
edition = "2021"

[lib]
name = "ppgoose_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
rayon = "1"
walkdir = "2"

# PNG: lossless optimizer + lossy quantizer
oxipng = { version = "9", default-features = false, features = ["parallel"] }
imagequant = "4"
png = "0.17"
rgb = "0.8"

# Universal image codec (JPEG, GIF, WebP decode/encode)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "rayon"] }

# Direct gif dep: image's GifDecoder doesn't expose the loop-count extension
gif = "0.14"

# GIF: gifski encoder (cross-frame palettes, far better quality/size than
# per-frame NeuQuant). default-features off skips the gifsicle C code.
gifski = { version = "1", default-features = false }
imgref = "1"

# Perceptual quality metric for smart-quality mode (极致模式)
dssim-core = "3"

# JPEG: Mozilla's optimized encoder (better than standard libjpeg by ~30%)
# Requires a C compiler (clang on macOS, already bundled with Xcode CLI tools)
mozjpeg = { version = "0.10", default-features = false }

# WebP: lossy encoding via libwebp (bundled C source, compiled via cc)
webp = "0.3"

# AVIF: pure-Rust AV1 image encoder (~50% smaller than JPEG at same quality)
# default-features = false disables the "asm" feature which requires NASM.
# For faster AVIF encoding: brew install nasm, then change to features = ["threading", "asm"]
ravif = { version = "0.11", default-features = false, features = ["threading"] }

[profile.dev]
incremental = true

# NOTE: do not set panic = "abort" here — mozjpeg reports errors via panics
# and jpeg.rs relies on catch_unwind to turn them into per-file errors.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
